--- a/fastintern-site/src/Views/Mentions_legales/cgu.twig
+++ b/fastintern-site/src/Views/Mentions_legales/cgu.twig
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="http://fastintern-static.local/static/css/cgu.css">
+    <link rel="stylesheet" href="http://fastintern-static.local/static/css/MentionsLegales/cgu.css">
     <title>{{ page_title|default('CGU') }}</title>
 </head>
 <body>
