Ajout d'un nouveau cas pour afficher les offres et mise à jour du lien dans la vue étudiant

--- a/fastintern-site/src/Views/Etudiant/index.twig
+++ b/fastintern-site/src/Views/Etudiant/index.twig
@@ -9,7 +9,7 @@
     <p>Vous êtes connecté en tant qu'étudiant.</p>
     
     <ul>
-        <li><a href="#">Voir les offres de stage</a></li>
+        <li><a href="/?uri=offres">Voir les offres de stage</a></li>
         <li><a href="#">Mes candidatures</a></li>
     </ul>
     
