Taille du rectangle cgu css réglé

--- a/fastintern-static/static/css/cgu.css
+++ b/fastintern-static/static/css/cgu.css
@@ -457,7 +457,7 @@ footer {
 /* informations légales */
 .legal_container {
     display: flex;
-    min-height: 150px;
+    min-height: auto;
     padding: 20px;
 }
 
@@ -465,6 +465,7 @@ footer {
 .left-menu {
     width: 200px;
     background-color: white;
+    height: fit-content;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
