Correction du type d'entrée pour le mot de passe dans le formulaire de connexion

--- a/fastintern-site/src/Views/Auth/connexion.twig
+++ b/fastintern-site/src/Views/Auth/connexion.twig
@@ -48,7 +48,7 @@
                     <input type="email" id="email" name="email" required value="{{ email_value|default('') }}">
                     
                     <label for="mot_de_passe">{{ mot_de_passe_label|default('Mot de passe') }}</label>
-                    <input type="mot_de_passe" id="mot_de_passe" name="mot_de_passe" required>
+                    <input type="password" id="mot_de_passe" name="mot_de_passe" required>
                     
                     <a href="/?uri=forgot-mot_de_passe" class="forgot-mot_de_passe">
                         {{ forgot_mot_de_passe_text|default('Mot de passe oublié ?') }}
